--- a/src/main/resources/templates/createproject.html
+++ b/src/main/resources/templates/createproject.html
@@ -6,11 +6,13 @@
 </head>
 <body>
 
-<form action="/createproj" method="post">
+<form action="/createproject" method="post">
     <label for="ProjectName">Proje Adı:</label><br>
     <input type="text" id="ProjectName" name="ProjectName"><br>
     <label for="ProjectDesc">Proje Açıklaması:</label><br>
     <input type="text" id="ProjectDesc" name="ProjectDesc"><br>
+    <label for="managerMail">Yonetici mail:</label><br>
+    <input type="text" id="managerMail" name="managerMail"><br>
     <button type="submit">Proje Oluştur</button>
 </form>
 
