--- a/src/main/resources/templates/adduser.html
+++ b/src/main/resources/templates/adduser.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
+    <meta charset="UTF-8">
     <title>Kullanıcıyı Projeye Ekle</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<h2>Kullanıcıyı Projeye Ekle</h2>
-<form method="POST" th:action="@{/adduser}">
-    <label for="projectId">Proje Kimliği:</label>
-    <input type="number" id="projectId" name="projectId" required><br><br>
-
-    <label for="managerMail">Yönetici E-Posta Adresi:</label>
-    <input type="email" id="managerMail" name="managerMail" required><br><br>
-
-    <label for="userMail">Kullanıcı E-Posta Adresi:</label>
-    <input type="email" id="userMail" name="userMail" required><br><br>
-
-    <input type="submit" value="Kullanıcıyı Ekle">
-</form>
+<div class="container">
+    <h2 class="text-center">Kullanıcıyı Projeye Ekle</h2>
+    <form method="POST" th:action="@{/adduser}">
+        <div class="form-group">
+            <label for="projectId">Proje Kimliği:</label>
+            <input type="number" id="projectId" name="projectId" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label for="managerMail">Doğrulama Amaçlı Yönetici E-Posta Adresiniz:</label>
+            <input type="email" id="managerMail" name="managerMail" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label for="userMail">Kullanıcı E-Posta Adresi:</label>
+            <input type="email" id="userMail" name="userMail" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Kullanıcıyı Ekle</button>
+    </form>
+</div>
 </body>
 </html>
